--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,7 +1,7 @@
 body {
     font-size: 20px;
     font-family: "Gill Sans", "Gill Sans MT", sans-serif;
-    background-color: CornSilk;
+    background-color: khaki;
 }
 
 section {
@@ -14,4 +14,7 @@ h1 {
 
 figure {
     margin-top: 3rem;
+}
+img {
+    border-radius: 1rem;
 }
